add api's changerole
