# docs/swagger.json
@@ -4,6 +4,61 @@
         "contact": {}
     },
     "paths": {
+        "/api/admin/changerole": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Change User Role",
+                "operationId": "ChangeRole",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "role",
+                        "name": "role",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "Role"
+                        }
+                    },
+                    "400": {
+                        "description": "You not admin",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "No data found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to query data: [Error Message]",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/admin/users": {
             "post": {
                 "description": "Get all users from the database",
@@ -11,9 +66,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "admin"
                 ],
-                "summary": "Get all users",
+                "summary": "Get all user",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -224,6 +279,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "user"
+                ],
                 "summary": "Аутентификация пользователя и выдача токена доступа",
                 "operationId": "authenticateUser",
                 "parameters": [
@@ -264,6 +322,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "user"
+                ],
                 "summary": "Logs out a user",
                 "operationId": "userLogout",
                 "responses": {
@@ -284,6 +345,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "user"
                 ],
                 "summary": "Регистрирует пользователя и выдача токена доступа",
                 "operationId": "registrationUser",
